syntax = "proto3";
package types;

message EthTx{
  string author = 1;
  bytes data = 2;
}