syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message Chain {
  string id = 1;
  string native_token = 2;

  // For ETH
  ChainEthConfig eth_config = 3;
}

message ChainEthConfig {
  int64 gas_price = 1;
  bool use_eip_1559 = 2;
}
