syntax = "proto3";
package types;

message KeygenProposal {
  string keyType = 1;

  // Random id for this proposal.
  string id = 2;

  int64 createdBlock = 3;
}

message KeygenProposalWithSigner {
  string signer = 1;
  KeygenProposal data = 2;
}

message KeygenResult {
  string signer = 1;
  string keyType = 2;
  bytes pubKeyBytes = 3;
  string address = 4;
  Result result = 5;

  enum Result {
    SUCCESS = 0;
    FAILURE = 1;
  }
}